rui/crates/memoize_attr/tests/ui/test_fail.stderr
error: `memoize` expects the first parameter to be `ui`
  --> tests/ui/test_fail.rs:10:4
   |
10 | fn comp(_count: usize) {}
   |    ^^^^
